Bug 390896 - %D in tab name is incorrect when current program is sudo
Summary: %D in tab name is incorrect when current program is sudo
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: tabbar (other bugs)
Version First Reported In: 17.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-22 10:11 UTC by ariasuni
Modified: 2018-02-24 05:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ariasuni 2018-02-22 10:11:03 UTC
When using sudo, current tab name shows absolute path but with a `~` in front of it.
Comment 1 Kurt Hindenburg 2018-02-24 05:05:45 UTC
Git commit 6639acb746e35adae6dc99d8a9f66cf510be767d by Kurt Hindenburg.
Committed on 24/02/2018 at 05:05.
Pushed by hindenburg into branch 'master'.

Handle %D in tab format when process's home dir is not found (eg sudo)

Replace %D with - in such cases where process's home dir is empty

M  +12   -7    src/Session.cpp

https://commits.kde.org/konsole/6639acb746e35adae6dc99d8a9f66cf510be767d