Handle %D in tab format when process's home dir is not found (eg sudo)

Replace %D with - in such cases where process's home dir is empty

BUG: 390896